<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:background="@color/dark_back"
                android:fontFamily="@font/carter_one"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/app_name"
                android:textColor="@color/light_primary_color"
                android:textSize="38sp" />


            <ImageView
                android:layout_width="61dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_chat"
                android:gravity="end"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_margin="1dp"
            android:textSize="18sp"
            android:id="@+id/etfirstname"
            android:textColorHint="@color/grey"
            android:padding="20sp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_margin="1dp"
            android:textSize="18sp"
            android:id="@+id/etlastname"
            android:textColorHint="@color/grey"
            android:padding="20sp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="1dp"
            android:textSize="18sp"
            android:id="@+id/etemail"
            android:textColorHint="@color/grey"
            android:padding="20sp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="1dp"
            android:textSize="18sp"
            android:id="@+id/etpass"
            android:textColorHint="@color/grey"
            android:padding="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retype_pass"
            android:layout_margin="1dp"
            android:textSize="18sp"
            android:id="@+id/etretypepass"
            android:textColorHint="@color/grey"
            android:padding="20sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:padding="10dp"/>



            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/female"
                android:textSize="18sp"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/grey"
                />
            </RadioGroup>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="20dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exit"
                android:textSize="15sp"
                android:textStyle="bold"
                android:id="@+id/btnexit"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/yellow"/>




            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/submit"
                android:id="@+id/btnsubmit"
                android:backgroundTint="@color/yellow"
                />



        </LinearLayout>




    </LinearLayout>







</LinearLayout>