<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/purple"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivarrow"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/average"
            android:gravity="center_vertical"
            android:text="@string/title"
            android:textSize="20sp"

            android:textStyle="bold" />


    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        app:tabTextColor="@color/dark_back"
        app:tabTextAppearance="@style/TextAppearance"
        app:tabIconTint="@color/black"
        >

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"


            />

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textColor="@color/dark_back"/>




    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>