<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B8B6BC"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="5dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="120dp"
                android:text="@string/username"
                android:textSize="23sp"
                android:textAlignment="center"
                android:textStyle="bold">

            </TextView>

            <ImageView
                android:layout_width="37dp"
                android:layout_height="33dp"

                android:src="@drawable/settings">

            </ImageView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:gravity="left"
            android:padding="10dp">


            <ImageView
                android:layout_width="135dp"
                android:layout_height="153dp"

                android:src="@drawable/account">

            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/cpost"
                            android:textAlignment="center"
                            android:textSize="23sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:text="@string/post"
                            android:textAlignment="center"
                            android:textSize="16sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="74dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/cfollowers"
                            android:textSize="23sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/followers"
                            android:layout_marginLeft="8dp"
                            android:textSize="16sp">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/cfollowing"
                            android:textSize="23sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/following"
                            android:textAlignment="center"
                            android:textSize="16sp">

                        </TextView>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/editpro"
                        android:textSize="15sp">



                    </Button>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold"


                >


            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bio"
                android:textSize="18sp"

                >


            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/link"
                android:textSize="18sp"
                android:textColor="#007FE5"


                >


            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">



                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="26dp"
                    android:layout_gravity="left"

                    android:layout_marginLeft="10dp"
                    android:src="@drawable/grid">

                </ImageView>





                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="37dp"
                    android:layout_gravity="left"
                    android:src="@drawable/menu"

                    >


                </ImageView>





                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="37dp"
                    android:layout_gravity="left"
                    android:src="@drawable/location"

                    >


                </ImageView>





                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="37dp"
                    android:layout_gravity="left"
                    android:src="@drawable/mention"

                    >


                </ImageView>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"

            >

            <ImageView

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="140dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_img">

            </ImageView>
            <ImageView

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="140dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_img"
                android:layout_marginLeft="5dp"
                >

            </ImageView>
            <ImageView

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="140dp"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_img">

            </ImageView>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
            >

            <ImageView

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="140dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_img">

            </ImageView>
            <ImageView

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="140dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_img"
                android:layout_marginLeft="5dp"
                >

            </ImageView>
            <ImageView

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="140dp"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_img">

            </ImageView>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="140dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_img">

            </ImageView>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="140dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_img"
                android:layout_marginLeft="5dp"
                >

            </ImageView>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="140dp"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_img">

            </ImageView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_gravity="end"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:padding="10dp">


                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="42dp"
                    android:layout_gravity="left"
                    android:src="@drawable/home"

                    ></ImageView>





                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="42dp"
                    android:layout_gravity="left"
                    android:src="@drawable/search"

                    >


                </ImageView>





                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="42dp"
                    android:layout_gravity="left"

                    android:src="@drawable/camera"

                    >


                </ImageView>




                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="42dp"

                    android:layout_gravity="left"
                    android:src="@drawable/heart"

                    >


                </ImageView>





                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="42dp"
                    android:layout_gravity="left"
                    android:src="@drawable/profile"

                    >


                </ImageView>



        </LinearLayout>
    </LinearLayout>
</ScrollView>